{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 285,
  "lineage": "4f8b4114-f348-a15f-b39a-78729e337468",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "res-24",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/networkInterfaces/vmjlabbr01srv139",
            "internal_domain_name_suffix": "1kdn5lc4vwzuxl4ztmlutfaqod.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "192.168.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/publicIPAddresses/vmjlabbr01srv-ip",
                "subnet_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/virtualNetworks/vnet-jlab-branch01/subnets/Compute"
              }
            ],
            "location": "centralus",
            "mac_address": "00-0D-3A-9F-BD-68",
            "name": "vmjlabbr01srv139",
            "private_ip_address": "192.168.1.4",
            "private_ip_addresses": [
              "192.168.1.4"
            ],
            "resource_group_name": "rg-jlab-branch01",
            "virtual_machine_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Compute/virtualMachines/vmjlabbr01srv"
          },
          "dependencies": [
            "azurerm_public_ip.res-29",
            "azurerm_resource_group.res-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-25",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/networkSecurityGroups/vnet-jlab-branch01-Compute-nsg-centralus",
            "location": "centralus",
            "name": "vnet-jlab-branch01-Compute-nsg-centralus",
            "resource_group_name": "rg-jlab-branch01",
            "security_rule": [
              {
                "access": "Allow",
                "description": "CSS Governance Security Rule.  Allow Corpnet inbound.  https://aka.ms/casg",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowCorpnet",
                "priority": 2700,
                "protocol": "*",
                "source_address_prefix": "CorpNetPublic",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "CSS Governance Security Rule.  Allow SAW inbound.  https://aka.ms/casg",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSAW",
                "priority": 2701,
                "protocol": "*",
                "source_address_prefix": "CorpNetSaw",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "MDC JIT Network Access rule created by an initiation request for policy 'default' of VM 'vmjlabbr01srv'.",
                "destination_address_prefix": "192.168.1.4",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "MicrosoftDefenderForCloud-JITRule--716079643-A90689DE34104AB6B015A370A7DA6A9E",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "70.246.77.65",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "MDC JIT Network Access rule for policy 'default' of VM 'vmjlabbr01srv'.",
                "destination_address_prefix": "192.168.1.4",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "MicrosoftDefenderForCloud-JITRule_-716079643_47500A4BD623480C817FAD4E3A1B4C3D",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.res-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-26",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "CSS Governance Security Rule.  Allow Corpnet inbound.  https://aka.ms/casg",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/networkSecurityGroups/vnet-jlab-branch01-Compute-nsg-centralus/securityRules/AllowCorpnet",
            "name": "AllowCorpnet",
            "network_security_group_name": "vnet-jlab-branch01-Compute-nsg-centralus",
            "priority": 2700,
            "protocol": "*",
            "resource_group_name": "rg-jlab-branch01",
            "source_address_prefix": "CorpNetPublic",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.res-25",
            "azurerm_resource_group.res-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-27",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "CSS Governance Security Rule.  Allow SAW inbound.  https://aka.ms/casg",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/networkSecurityGroups/vnet-jlab-branch01-Compute-nsg-centralus/securityRules/AllowSAW",
            "name": "AllowSAW",
            "network_security_group_name": "vnet-jlab-branch01-Compute-nsg-centralus",
            "priority": 2701,
            "protocol": "*",
            "resource_group_name": "rg-jlab-branch01",
            "source_address_prefix": "CorpNetSaw",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.res-25",
            "azurerm_resource_group.res-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "res-29",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/publicIPAddresses/vmjlabbr01srv-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.176.210.212",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "vmjlabbr01srv-ip",
            "resource_group_name": "rg-jlab-branch01",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.res-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "res-30",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/publicIPAddresses/vngw-jlab-branch01-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.176.211.121",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "vngw-jlab-branch01-pip",
            "resource_group_name": "rg-jlab-branch01",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.res-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "res-31",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/publicIPAddresses/vngw-jlab-branch01-pip1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.176.210.72",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "vngw-jlab-branch01-pip1",
            "resource_group_name": "rg-jlab-branch01",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.res-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-34",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/virtualNetworks/vnet-jlab-branch01/subnets/Compute",
            "name": "Compute",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-jlab-branch01",
            "virtual_network_name": "vnet-jlab-branch01"
          },
          "dependencies": [
            "azurerm_resource_group.res-1",
            "azurerm_virtual_network.res-33"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-36",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.0.0/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/virtualNetworks/vnet-jlab-branch01/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-jlab-branch01",
            "virtual_network_name": "vnet-jlab-branch01"
          },
          "dependencies": [
            "azurerm_resource_group.res-1",
            "azurerm_virtual_network.res-33"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "res-35",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/virtualNetworks/vnet-jlab-branch01/subnets/Compute",
            "network_security_group_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/networkSecurityGroups/vnet-jlab-branch01-Compute-nsg-centralus",
            "subnet_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/virtualNetworks/vnet-jlab-branch01/subnets/Compute"
          },
          "dependencies": [
            "azurerm_network_security_group.res-25",
            "azurerm_subnet.res-34"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "res-33",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "acdf86da-ad5e-4bb3-afd9-9b1749941073",
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/virtualNetworks/vnet-jlab-branch01",
            "location": "centralus",
            "name": "vnet-jlab-branch01",
            "resource_group_name": "rg-jlab-branch01",
            "subnet": [
              {
                "address_prefix": "192.168.0.0/27",
                "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/virtualNetworks/vnet-jlab-branch01/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              },
              {
                "address_prefix": "192.168.1.0/24",
                "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/virtualNetworks/vnet-jlab-branch01/subnets/Compute",
                "name": "Compute"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.res-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "res-32",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": true,
            "bgp_route_translation_for_nat_enabled": false,
            "bgp_settings": [
              {
                "asn": 65533,
                "peer_weight": 0,
                "peering_addresses": [
                  {
                    "default_addresses": [
                      "192.168.0.6"
                    ],
                    "ip_configuration_name": "default",
                    "tunnel_ip_addresses": [
                      "52.176.211.121",
                      "192.168.0.4"
                    ]
                  },
                  {
                    "default_addresses": [
                      "192.168.0.7"
                    ],
                    "ip_configuration_name": "activeActive",
                    "tunnel_ip_addresses": [
                      "52.176.210.72",
                      "192.168.0.5"
                    ]
                  }
                ]
              }
            ],
            "dns_forwarding_enabled": false,
            "enable_bgp": true,
            "generation": "Generation1",
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/virtualNetworkGateways/vngw-jlab-branch01",
            "ip_configuration": [
              {
                "name": "default",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/publicIPAddresses/vngw-jlab-branch01-pip",
                "subnet_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/virtualNetworks/vnet-jlab-branch01/subnets/GatewaySubnet"
              },
              {
                "name": "activeActive",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/publicIPAddresses/vngw-jlab-branch01-pip1",
                "subnet_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/virtualNetworks/vnet-jlab-branch01/subnets/GatewaySubnet"
              }
            ],
            "ip_sec_replay_protection_enabled": true,
            "location": "centralus",
            "name": "vngw-jlab-branch01",
            "private_ip_address_enabled": true,
            "remote_vnet_traffic_enabled": false,
            "resource_group_name": "rg-jlab-branch01",
            "sku": "VpnGw2",
            "type": "Vpn",
            "virtual_wan_traffic_enabled": false,
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "azurerm_public_ip.res-31",
            "azurerm_resource_group.res-1",
            "azurerm_subnet.res-36",
            "azurerm_virtual_network.res-33"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway_connection",
      "name": "res-20",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connection_mode": "Default",
            "connection_protocol": "IKEv2",
            "dpd_timeout_seconds": 45,
            "enable_bgp": true,
            "express_route_gateway_bypass": false,
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/connections/s2s-vwan-hub-scus-primary",
            "local_azure_ip_address_enabled": false,
            "local_network_gateway_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/localNetworkGateways/lngw-vwan-jlab-primary",
            "location": "centralus",
            "name": "s2s-vwan-hub-scus-primary",
            "resource_group_name": "rg-jlab-branch01",
            "routing_weight": 0,
            "shared_key": "SharedKey2024",
            "type": "IPsec",
            "use_policy_based_traffic_selectors": false,
            "virtual_network_gateway_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/virtualNetworkGateways/vngw-jlab-branch01"
          },
          "dependencies": [
            "azurerm_local_network_gateway.res-22",
            "azurerm_public_ip.res-31",
            "azurerm_resource_group.res-1",
            "azurerm_subnet.res-36",
            "azurerm_virtual_network.res-33",
            "azurerm_virtual_network_gateway.res-32"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway_connection",
      "name": "res-21",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connection_mode": "Default",
            "connection_protocol": "IKEv2",
            "dpd_timeout_seconds": 45,
            "enable_bgp": true,
            "express_route_gateway_bypass": false,
            "id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/connections/s2s-vwan-hub-scus-secondary",
            "local_azure_ip_address_enabled": false,
            "local_network_gateway_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/localNetworkGateways/lngw-vwan-jlab-secondary",
            "location": "centralus",
            "name": "s2s-vwan-hub-scus-secondary",
            "resource_group_name": "rg-jlab-branch01",
            "routing_weight": 0,
            "shared_key": "SharedKey2024",
            "type": "IPsec",
            "use_policy_based_traffic_selectors": false,
            "virtual_network_gateway_id": "/subscriptions/21e1ef34-0963-45a7-adf0-9ec348b85362/resourceGroups/rg-jlab-branch01/providers/Microsoft.Network/virtualNetworkGateways/vngw-jlab-branch01"
          },
          "dependencies": [
            "azurerm_local_network_gateway.res-23",
            "azurerm_public_ip.res-31",
            "azurerm_resource_group.res-1",
            "azurerm_subnet.res-36",
            "azurerm_virtual_network.res-33",
            "azurerm_virtual_network_gateway.res-32"
          ]
        }
      ]
    }
  ]
}